# euclid-surface-photometry

./: ._Euclid_disc_breaks.txt  ._setup.py  .gitignore  .readthedocs.yaml  Euclid_disc_breaks.txt  README.md  euclid_config.yaml  profile_results_2026-05-12_1424.csv  pyproject.toml  setup.py
docs/: Makefile  conf.py  index.rst  mer.rst  references.bib  references.rst  requirements.txt  science.rst
docs/_build/doctrees/: ._changelog.doctree  ._index.doctree  ._science.doctree  ._usage.doctree  changelog.doctree  index.doctree  mer.doctree  references.doctree  science.doctree  usage.doctree
docs/_build/doctrees/api/: ._euclid_pipelines.doctree  ._euclid_profile_pipeline_pool.doctree  ._index.doctree  euclid_pipelines.doctree  index.doctree
docs/_build/doctrees/figures/: ._README.doctree  README.doctree
docs/_build/doctrees/pipeline/: ._index.doctree  ._module1.doctree  ._module2.doctree  ._module3.doctree  ._module4.doctree  ._module5.doctree  index.doctree  module1.doctree  module2.doctree  module3.doctree  module4.doctree  module5.doctree
docs/_build/html/: ._changelog.html  ._index.html  ._science.html  ._usage.html  .buildinfo  changelog.html  genindex.html  index.html  mer.html  objects.inv  py-modindex.html  references.html  science.html  search.html  searchindex.js  usage.html
docs/_build/html/_modules/: euclid_pipelines.html  index.html
docs/_build/html/_sources/: changelog.rst.txt  (+3 more)
docs/figures/: README.rst
docs/pipeline/: index.rst  module2.rst
euclid_surface_photometry/: __init__.py  modules.py  morphology.py  pipeline.py  plots.py  utils.py
(+27 files in other folders)
