# pyproject.toml for build system requirements
[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "euclid-surface-photometry"
version = "0.1.0"
dependencies = [
    "click", # Recommended for professional CLIs
]

[project.scripts]
 = "euclid-surface-photometry.pipeline:main"